# hot-chocolate

./: .coveragerc  .travis.yml  HISTORY.rst  LICENSE  MANIFEST.in  README.rst  dev_requirements.txt  example.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: test.yml
src/cacao/: __init__.py  utils.py
src/cacao/templates/: article.html  base.html  index.html
src/hotchocolate/: __init__.py  cli.py  css.py  feeds.py  logging.py  markdown.py  plugins.py  readers.py  settings.py  settings.toml  site.py  templates.py  utils.py  writers.py
src/hotchocolate/style/: article.scss  aside.scss  code.scss  footer.scss  main.scss
src/hotchocolate/styles/: article.scss  aside.scss  pagination.scss  style.scss
src/hotchocolate/templates/: archive.html  article.html  article_content.html  atom.xml  base.html  base_footer.html  base_header.html  index.html  page.html  pagination.html  post.html  post_content.html  rss.xml
tests/: conftest.py  test_css.py  test_feeds.py  test_markdown.py  test_pagination.py  test_settings.py  test_site.py  test_tags.py  test_templates.py  test_truth.py  test_utils.py
tests/examplesite/: config.ini
tests/examplesite/posts/: a-post-with-four-tags.md  a-post-with-two-tags.md
